--- a/src/components/Quiz.css
+++ b/src/components/Quiz.css
@@ -48,6 +48,11 @@ Hint: You can use the className attribute for highlighting*/
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+
+  li.selected {
+    background-color: #7b82de;
+    border: 3px solid #0a0909;
+  }
   
   /* Submit button styles */
   button {
